# smart-photo-copier

./: .gitignore  Cargo.toml  README.md  build.js  flake.nix  index.html  main.js  package-lock.json  package.json  script.js  styles.css
gui/: Cargo.toml
gui/src/: main.rs  paths_view.rs
hash-files/: index.js  normalize.js  package-lock.json  package.json
smart-copy/: Cargo.toml
smart-copy/src/: README.md  async_fs.rs  file_comparer.rs  lib.rs  mock_fs.rs  read_dir_recursive.rs  recursive_stream.rs  smart_copy.rs  tokio_async_fs.rs
src/: async_fs.rs  fs.rs  lib.rs  mock_fs.rs  smart_copy.rs  tokio_async_fs.rs
