[package]
name = "smart-photo-copier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
crossbeam = { version = "0.8.4", features = ["crossbeam-queue"] }
dashmap = "6.1.0"
futures = "0.3.31"
postcard = { version = "1.1.1", features = ["use-std"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
